@@ -1,5 +1,6 @@
 package no.fintlabs.core.consumer.shared.resource.event;
 
+import jakarta.annotation.PostConstruct;
 import no.fint.model.resource.FintLinks;
 import no.fint.relations.FintLinker;
 import no.fintlabs.adapter.models.OperationType;
@@ -12,7 +13,6 @@ import no.fintlabs.kafka.event.EventConsumerFactoryService;
 import no.fintlabs.kafka.event.topic.EventTopicNamePatternParameters;
 import org.apache.kafka.clients.consumer.ConsumerRecord;
 
-import javax.annotation.PostConstruct;
 import java.io.Serializable;
 
 public abstract class EventResponseKafkaConsumer<T extends FintLinks & Serializable> {
@@ -66,7 +66,7 @@ public abstract class EventResponseKafkaConsumer<T extends FintLinks & Serializa
     }
 
     private String createEventName(OperationType operationType) {
-        return String.format("%s-%s-%s-%s-%s",
+        return "%s-%s-%s-%s-%s".formatted(
                 consumerConfig.getDomainName(),
                 consumerConfig.getPackageName(),
                 consumerConfig.getResourceName(),
